Fix sub menu overflow

--- a/wcomponents-theme/src/main/sass/wc.ui.menu.barColumn.dt.scss
+++ b/wcomponents-theme/src/main/sass/wc.ui.menu.barColumn.dt.scss
@@ -13,6 +13,7 @@
 	height: auto; // override (mobile) default
 	left: 0;
 	min-width: 100%;
+	overflow: visible;
 	position: absolute;
 	top: 100%;
 	width: auto;
